fix(map): height on Safari
Fixes #734.

--- a/app/css/scss/organisms/_map.scss
+++ b/app/css/scss/organisms/_map.scss
@@ -81,7 +81,7 @@ $search-width-wide: 300px;
   }
 
   .section-bulletin-map & {
-    max-height: $map-height-bulletin;
+    height: $map-height-bulletin;
     min-height: $map-height-min;
     @include mixins.box-border(variables.$brand-very-light);
     border-left: none;
